# ChangeLog for net-mail/fetchmail
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/fetchmail/ChangeLog,v 1.154 2009/01/11 15:56:08 dertobi123 Exp $

  11 Jan 2009; Tobias Scherbaum <dertobi123@gentoo.org>
  -files/fetchmail-6.3.7-poll-again.patch, -fetchmail-6.3.6.ebuild,
  -fetchmail-6.3.7-r1.ebuild, -fetchmail-6.3.8.ebuild,
  -fetchmail-6.3.8-r2.ebuild:
  Clean up

  10 Jan 2009; Markus Meier <maekke@gentoo.org> fetchmail-6.3.9.ebuild:
  amd64 stable, bug #253871

  07 Jan 2009; Raúl Porcel <armin76@gentoo.org> fetchmail-6.3.9.ebuild:
  alpha/ia64/sparc/x86 stable wrt #253871

  07 Jan 2009; Jeroen Roovers <jer@gentoo.org> fetchmail-6.3.9.ebuild:
  Stable for HPPA (bug #253871).

  06 Jan 2009; Brent Baude <ranger@gentoo.org> fetchmail-6.3.9.ebuild:
  Marking fetchmail-6.3.9 ppc64 for bug 253871

  06 Jan 2009; Tobias Scherbaum <dertobi123@gentoo.org>
  fetchmail-6.3.9.ebuild:
  ppc stable, bug #253871

*fetchmail-6.3.9 (25 Dec 2008)

  25 Dec 2008; Torsten Veller <tove@gentoo.org> +fetchmail-6.3.9.ebuild:
  Version bump.

  22 Jun 2008; Markus Meier <maekke@gentoo.org> fetchmail-6.3.8-r2.ebuild:
  amd64 stable, bug #227105

  16 Jun 2008; Jeroen Roovers <jer@gentoo.org> fetchmail-6.3.8-r2.ebuild:
  Stable for HPPA (bug #227105).

  15 Jun 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  fetchmail-6.3.8-r2.ebuild:
  ppc stable, bug #227105

  15 Jun 2008; Raúl Porcel <armin76@gentoo.org> fetchmail-6.3.8-r2.ebuild:
  ia64/sparc/x86 stable wrt security #227105

  15 Jun 2008; Tobias Klausmann <klausman@gentoo.org>
  fetchmail-6.3.8-r2.ebuild:
  Stable on alpha, bug #227105

  15 Jun 2008; Brent Baude <ranger@gentoo.org> fetchmail-6.3.8-r2.ebuild:
  Marking fetchmail-6.3.8-r2 ppc64 for bug 227105

  15 Jun 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  fetchmail-6.3.8-r2.ebuild:
  remove useless dodoc ABOUT-NLS

*fetchmail-6.3.8-r2 (15 Jun 2008)
