@@ -4,11 +4,11 @@ AUX fetchmail-6.2.5-broken-headers.patch 288 RMD160 1e5237c2cd24223ec4b98b2f67c5
 AUX fetchmail-6.3.8-null-msg-pointer.patch 497 RMD160 6b0da53abcb4eee861a8ddba47b1353ef5e58f4f SHA1 707d678ce3a7c0a0898db80cbb6d903873014a5b SHA256 6625692842a1c654fd7e07389ab476ac2a45a73a7dfcf4907524bffebdca7e67
 AUX fetchmail-6.3.8-resize-buffer.patch 848 RMD160 4d51e00ccdc170870d58691727b43fbc430323b0 SHA1 bef21c6cf56068fe580ebc24a4dbd104d3ecdba6 SHA256 79a4e58c18050d746a8b978203274838e971235fa3705c262c6c4f7562e75231
 AUX fetchmail-prefix.patch 1127 RMD160 3566bc4ab70749034eb90c23f374bf7e95aab964 SHA1 02f989f7ca4f267c10c038a2f1725b833cbc9719 SHA256 37b579e7a18d28af79f44f558de1444d21e5cfe4cf5b5ed52622f93c8088781d
+AUX fetchmail.new 686 RMD160 d686776466385ec205dd704dbab999953cb9ee17 SHA1 660e9c766cbf4629a3e74ecd74ef56b5a1a299ce SHA256 5ef42ca61fcf0e60529e0be9c6bef4b61a9e34e7a82f766f046c8457bc9392b5
 DIST fetchmail-6.3.8.tar.bz2 1323515 RMD160 34034f9ae9fe44ba35f0a16d3128d4a9b0001df2 SHA1 b8e8c51ed6cf53fc398c821fdb29d166c6713bb0 SHA256 5612f9af367f641e0efd084f44fcf1889669e711dbd8c60f6b7953e494d1b09b
 DIST fetchmail-6.3.9.tar.bz2 1538134 RMD160 5fcea0ae97ff64633a50e164270ab68435186fbc SHA1 2ed705ffe40afd6d085535cf2af06914507da36a SHA256 3dfd3b04aa552331f91f96bdf5f5afe489c31a600ae7973f5814bde5555813dc
 EBUILD fetchmail-6.3.8-r1.ebuild 2523 RMD160 7b91bce8926447af19728469714e3196f2f19675 SHA1 6de81572f3cf9566cd966ef00116a46c2fa196a7 SHA256 462e9a0716828846888aff4aa6af422f6ad6549e6496f32ee5b3c63a8157f9d1
-EBUILD fetchmail-6.3.8-r2.ebuild 2577 RMD160 b917bc5aad006a5dce38fa7f90c88069131acbc1 SHA1 318f5e617a7b6cedf48dadb733a44450a882539b SHA256 96f1e9e148ee6b0d7cbf02f9d8a4a8b36da88eae3b1cc89f41ec67769db9ccd1
-EBUILD fetchmail-6.3.8.ebuild 2366 RMD160 869e56c0bc96b79af47e53b2c6889045391cd86c SHA1 6e6a591f64c2d6f6cf472ce9862a133763e2aaea SHA256 ea6b5d1213c78cf6e365f610e5429a2222e69db29329de3dd3552e822fbfcd00
+EBUILD fetchmail-6.3.9-r1.ebuild 3150 RMD160 c7ffb61081996b420b0f89b946e860d1689fc2c6 SHA1 f8dc2793dc735b19352050ecbcec39591f5290f9 SHA256 cf1a041ea14a1e267b9e8d62be50064a4b86b9a14d4e865f02316d94d0636d42
 EBUILD fetchmail-6.3.9.ebuild 2768 RMD160 19ad5e97470d3b605042067bca96a8df85a9ccee SHA1 5fca55c4715326308401156e1e5ffeb187269e75 SHA256 43580e794401ec3d413a04e7962af504f29ced394b9c0bdd32d9820b059697ab
-MISC ChangeLog 22995 RMD160 0d524e60a904cf6f5718f177200f86d28da0d661 SHA1 64546c00c858ce57eac750dfd9c5ca8f85639bdc SHA256 05aaf09cbcfe6e8c8e610e5da9c0139ad06580a2861f8cecbffa2514ccd5b0c2
+MISC ChangeLog 23294 RMD160 7eb4d719ef6213663506a813914bfdbc92ea281d SHA1 8f3bf928a404e27018619d51afa1e9447ca97fb5 SHA256 0b1faf6eef877f07c727440134093899c16af958edac8d8265e4aa536d0e11f9
 MISC metadata.xml 237 RMD160 c2a1a048559257005241ad0985c814bd6aab17a7 SHA1 d448f9b9c9f2a92d95efaf4cf9ce3b83b3f9ad3b SHA256 2ff40136507932f8146b07f93d8414eef1cba8bbed94c9eeccf42b6cbbebf7c3
