@@ -1,14 +1,14 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/fetchmail/fetchmail-6.3.8-r2.ebuild,v 1.8 2008/06/22 11:32:32 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/fetchmail/fetchmail-6.3.9-r1.ebuild,v 1.1 2009/02/20 04:26:15 darkside Exp $
 
 EAPI="prefix"
 
-inherit eutils
+inherit multilib python eutils
 
 DESCRIPTION="the legendary remote-mail retrieval and forwarding utility"
 HOMEPAGE="http://fetchmail.berlios.de"
-SRC_URI="http://download2.berlios.de/${PN}/${P}.tar.bz2"
+SRC_URI="mirror://berlios/${PN}/${P}.tar.bz2"
 
 LICENSE="GPL-2 public-domain"
 SLOT="0"
@@ -19,22 +19,25 @@ RDEPEND="hesiod? ( net-dns/hesiod )
 	ssl? ( >=dev-libs/openssl-0.9.6 )
 	kerberos? ( app-crypt/mit-krb5 )
 	nls? ( virtual/libintl )
-	!elibc_glibc? ( sys-libs/com_err )"
+	!elibc_glibc? ( sys-libs/com_err )
+	virtual/python"
 DEPEND="${RDEPEND}
 	nls? ( sys-devel/gettext )"
+
+pkg_setup() {
+	enewgroup ${PN}
+	enewuser ${PN} -1 -1 /var/lib/${PN} ${PN}
+}
 
 src_unpack() {
 	unpack ${A}
 	cd "${S}"
 
-	# fixes DoS, #191154
-	epatch "${FILESDIR}"/${P}-null-msg-pointer.patch
-
-	# bug #227105
-	epatch "${FILESDIR}"/${P}-resize-buffer.patch
-
 	# this patch fixes bug #34788 (ticho@gentoo.org 2004-09-03)
 	epatch "${FILESDIR}"/${PN}-6.2.5-broken-headers.patch
+
+	# dont compile during src_install
+	: > "${S}"/py-compile
 }
 
 src_compile() {
@@ -42,14 +45,16 @@ src_compile() {
 	use ssl \
 		&& myconf="${myconf} --with-ssl=${EPREFIX}/usr" \
 		|| myconf="${myconf} --without-ssl"
-	econf \
+#	PYTHON=: \
+		econf \
 		--disable-dependency-tracking \
 		--enable-RPA \
 		--enable-NTLM \
 		--enable-SDPS \
 		$(use_enable nls) \
 		$(use_enable ipv6 inet6) \
-		$(use_with kerberos gssapi) $(use_with kerberos kerberos5) \
+		$(use_with kerberos gssapi) \
+		$(use_with kerberos kerberos5) \
 		$(use_with krb4 kerberos) \
 		$(use_with hesiod) \
 		${myconf} || die "Configuration failed."
@@ -58,27 +63,38 @@ src_compile() {
 }
 
 src_install() {
+	# dir for pidfile
+	dodir /var/run/${PN} || die "dodir failed"
+	keepdir /var/run/${PN}
+	fowners ${PN}:${PN} /var/run/${PN} || die "fowners failed"
+
+	# fetchmail's homedir (holds fetchmail's .fetchids)
+	dodir /var/lib/${PN} || die "dodir failed"
+	keepdir /var/lib/${PN}
+	fowners ${PN}:${PN} /var/lib/${PN} || die "fowners failed"
+	fperms 700 /var/lib/${PN} || die "fperms failed"
+
 	emake DESTDIR="${D}" install || die
+	python_need_rebuild
 
 	dohtml *.html
 
-	dodoc FAQ FEATURES NEWS NOTES README README.NTLM README.SSL TODO
+	dodoc FAQ FEATURES NEWS NOTES README README.NTLM README.SSL TODO || die
 
-	cp "${FILESDIR}"/fetchmail .
-	epatch "${FILESDIR}"/fetchmail-prefix.patch
-	eprefixify fetchmail
-	newinitd fetchmail fetchmail
-	newconfd "${FILESDIR}"/conf.d-fetchmail fetchmail
+	newinitd "${FILESDIR}"/fetchmail.new fetchmail || die
+	newconfd "${FILESDIR}"/conf.d-fetchmail fetchmail || die
 
 	docinto contrib
 	local f
-	for f in contrib/*
-	do
+	for f in contrib/* ; do
 		[ -f "${f}" ] && dodoc "${f}"
 	done
 }
 
 pkg_postinst() {
+	python_version
+	python_mod_optimize /usr/$(get_libdir)/python${PYVER}/site-packages
+
 	if ! python -c "import Tkinter" >/dev/null 2>&1
 	then
 		elog
@@ -93,4 +109,9 @@ pkg_postinst() {
 
 	elog "Please see /etc/conf.d/fetchmail if you want to adjust"
 	elog "the polling delay used by the fetchmail init script."
+}
+
+pkg_postrm() {
+	python_version
+	python_mod_cleanup /usr/$(get_libdir)/python${PYVER}/site-packages
 }
