@@ -1,0 +1,33 @@
+#!/sbin/runscript
+
+pidfile=/var/run/fetchmail/fetchmail.pid
+
+depend() {
+	need net
+	use mta
+}
+
+checkconfig() {
+        if [ ! -f /etc/fetchmailrc ]; then
+                eerror "Configuration file /etc/fetchmailrc not found"
+                return 1
+        fi
+}
+
+start() {
+        checkconfig || return 1
+
+        ebegin "Starting fetchmail"
+        start-stop-daemon --start --quiet \
+		--chuid fetchmail --exec /usr/bin/fetchmail \
+		-- -d ${polling_period} -f /etc/fetchmailrc \
+		--pidfile ${pidfile} -i /var/lib/fetchmail/.fetchids
+        eend ${?}
+}
+
+stop() {
+        ebegin "Stopping fetchmail"
+        start-stop-daemon --stop --quiet --pidfile ${pidfile}
+        eend ${?}
+}
+
